feat : change color and services text

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
-  color: #0c0c0c;
+  color: #19243B;
   background-color: #ffffff;
 }
 
@@ -82,7 +82,7 @@ body {
 .custom_nav-container .navbar-nav .nav-item .nav-link {
   padding: 7px 20px;
   margin: 10px 15px;
-  color: #000000;
+  color: #19243B;
   text-align: center;
   border-radius: 35px;
   text-transform: uppercase;
@@ -90,7 +90,7 @@ body {
 }
 
 .custom_nav-container .navbar-nav .nav-item.active .nav-link, .custom_nav-container .navbar-nav .nav-item:hover .nav-link {
-  background-color: #4b208c;
+  background-color: #19243B;
   color: #ffffff;
 }
 
@@ -140,7 +140,7 @@ a:focus {
 .navbar-brand span {
   font-size: 22px;
   font-weight: 700;
-  color: #4b208c;
+  color: #19243B;
 }
 
 .custom_nav-container {
@@ -167,7 +167,7 @@ a:focus {
   display: block;
   width: 35px;
   height: 4px;
-  background-color: #190734;
+  background-color: #19243B;
   margin: 7px 0;
   -webkit-transition: all .3s;
   transition: all .3s;
@@ -212,7 +212,7 @@ a:focus {
           align-items: center;
   position: relative;
   z-index: 2;
-  color: #3b3a3a;
+  color: #19243B;
   padding-bottom: 90px;
 }
 
@@ -223,7 +223,7 @@ a:focus {
 }
 
 .slider_section .detail_box {
-  color: #000000;
+  color: #19243B;
 }
 
 .slider_section .detail_box h1 {
@@ -238,18 +238,18 @@ a:focus {
 .slider_section .detail_box a {
   display: inline-block;
   padding: 10px 40px;
-  background-color: #4b208c;
+  background-color: #19243B;
   color: #ffffff;
   border-radius: 35px;
   margin-top: 35px;
 }
 
 .slider_section .detail_box a:hover {
-  background-color: #5625a1;
+  background-color: #19243B;
 }
 
 .slider_section .img_container {
-  border: 7px solid #7b57b2;
+  border: 7px solid #19243B;
   border-radius: 100%;
   overflow: hidden;
 }
@@ -288,7 +288,7 @@ a:focus {
 
 .slider_section .carousel-control-next {
   background-image: url(../images/next.png);
-  background-color: #4b208c;
+  background-color: #19243B;
   -webkit-transform: translate(-45px, 0);
           transform: translate(-45px, 0);
 }
@@ -351,13 +351,13 @@ a:focus {
 }
 
 .service_section .service_container .box .detail-box h5 {
-  color: #2e0e5f;
+  color: #19243B;
   font-weight: 600;
   position: relative;
 }
 
 .service_section .service_container .box:hover, .service_section .service_container .box.active {
-  border-top: 15px solid #512a97;
+  border-top: 15px solid #19243B;
 }
 
 .service_section .btn-box {
@@ -373,13 +373,13 @@ a:focus {
 .service_section .btn-box a {
   display: inline-block;
   padding: 10px 35px;
-  background-color: #4b208c;
+  background-color: #19243B;
   color: #ffffff;
   border-radius: 35px;
 }
 
 .service_section .btn-box a:hover {
-  background-color: #5625a1;
+  background-color: #19243B;
 }
 
 .about_section {
@@ -403,7 +403,7 @@ a:focus {
 }
 
 .about_section .img_container .img-box {
-  border: 5px solid #7b57b2;
+  border: 5px solid #19243B;
   border-radius: 100%;
   overflow: hidden;
 }
@@ -433,14 +433,14 @@ a:focus {
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 35px;
-  background-color: #4b208c;
+  background-color: #19243B;
   color: #ffffff;
   border-radius: 5px;
   margin: 25px 0 45px 0;
 }
 
 .about_section .detail-box a:hover {
-  background-color: #5625a1;
+  background-color: #19243B;
 }
 
 .blog_section .heading_container {
@@ -493,25 +493,25 @@ a:focus {
   padding-left: 25px;
   background-color: transparent;
   outline: none;
-  color: #101010;
+  color: #19243B;
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16);
 }
 
 .contact_section input::-webkit-input-placeholder {
-  color: #737272;
+  color: #19243B;
 }
 
 .contact_section input:-ms-input-placeholder {
-  color: #737272;
+  color: #19243B;
 }
 
 .contact_section input::-ms-input-placeholder {
-  color: #737272;
+  color: #19243B;
 }
 
 .contact_section input::placeholder {
-  color: #737272;
+  color: #19243B;
 }
 
 .contact_section input.message-box {
@@ -522,14 +522,14 @@ a:focus {
   border: none;
   display: inline-block;
   padding: 12px 45px;
-  background-color: #4b208c;
+  background-color: #19243B;
   color: #ffffff;
   border-radius: 0px;
   margin-top: 35px;
 }
 
 .contact_section button:hover {
-  background-color: #5625a1;
+  background-color: #19243B;
 }
 
 .contact_section .map_container {
@@ -549,7 +549,7 @@ a:focus {
 
 /* info section */
 .info_section {
-  background-color: #190734;
+  background-color: #19243B;
   color: #ffffff;
 }
 
@@ -607,7 +607,7 @@ a:focus {
       -ms-flex: 2.5;
           flex: 2.5;
   outline: none;
-  color: #000000;
+  color: #19243B;
   min-height: 42.4px;
   padding-left: 15px;
 }
@@ -639,7 +639,7 @@ a:focus {
   border: none;
   display: inline-block;
   padding: 10px 30px;
-  background-color: #4b208c;
+  background-color: #19243B;
   color: #ffffff;
   border-radius: 0;
   font-size: 15px;
@@ -647,7 +647,7 @@ a:focus {
 }
 
 .info_section .info_form form button:hover {
-  background-color: #5625a1;
+  background-color: #19243B;
 }
 
 .info_section .box {
@@ -680,13 +680,13 @@ a:focus {
 }
 
 .footer_section p {
-  color: #222222;
+  color: #19243B;
   margin: 0 auto;
   text-align: center;
   padding: 20px;
 }
 
 .footer_section p a {
-  color: #222222;
+  color: #19243B;
 }
 /*# sourceMappingURL=style.css.map */
